--- a/green-theme.css
+++ b/green-theme.css
@@ -5,20 +5,20 @@
     z-index: 1;
 }
 
-.guitar-blue, .drums-red, .drums-green {
+.guitar-purple, .drums-red, .guitar-blue {
     display: none;
 }
 
 body {
     margin: 0;
     position: relative;
-    background: linear-gradient(180deg, rgb(37, 0, 39) 33%, rgba(90,0,91,1) 100%) fixed;
+    background: linear-gradient(0deg, rgba(9,96,0,1) 0%, rgba(1,31,0,1) 46%) fixed;
 }
 
-.guitar-purple {
+.drums-green {
     position: fixed;
     z-index: -1;
-    height: 80vh;
+    height: 85vh;
     right: 0;
     left: 0;
     bottom: 2%;
@@ -51,10 +51,10 @@ h2 {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(37, 0, 39, 0.733);
-    border: 1px solid rgb(255, 0, 255);
+    background-color: rgba(1,31,0,.733);
+    border: 1px solid rgb(26, 255, 0);
     border-radius: 20px;
-    box-shadow: 0px 0px 9px 2px rgb(255, 0, 255);
+    box-shadow: 0px 0px 9px 2px rgb(26, 255, 0);
     padding: 5px;
     margin-top: -30px;
     margin-bottom: 15px;
@@ -99,8 +99,8 @@ form {
     width: 30%;
     margin-top: 15px;
     font-size: 25px;
-    background-color: rgba(37, 0, 39, 0.733);
-    box-shadow: 0px 0px 9px 5px rgb(255, 0, 255);
+    background-color: rgba(1,31,0,.733);
+    box-shadow: 0px 0px 9px 2px rgb(26, 255, 0);
 }
 
 h1 {
@@ -116,10 +116,10 @@ h1 {
 
 .sheet-music-results {
     font-size: 16px;
-    border: 1px solid rgb(255, 0, 255);
+    border: 1px solid rgb(26, 255, 0);
     border-radius: 20px;
-    box-shadow: 0px 0px 9px 2px rgb(255, 0, 255);
-    background-color: rgba(37, 0, 39, 0.733);
+    box-shadow: 0px 0px 9px 2px rgb(26, 255, 0);
+    background-color: rgba(1,31,0,.733);
     width: fit-content;
     margin-left: 5%;
     margin-bottom: 15px;
@@ -142,10 +142,10 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
-    border: 1px solid rgb(255, 0, 255);
+    border: 1px solid rgb(26, 255, 0);
     border-radius: 20px;
-    box-shadow: 0px 0px 9px 2px rgb(255, 0, 255);
-    background-color: rgba(37, 0, 39, 0.733);
+    box-shadow: 0px 0px 9px 2px rgb(26, 255, 0);
+    background-color: rgba(1,31,0,.733);
 }
 
 .video-info {
@@ -225,7 +225,7 @@ h1 {
     }
 
     .button:hover {
-        box-shadow: 0px 0px 9px 12px rgb(255, 0, 255);
+        box-shadow: 0px 0px 9px 12px rgb(26, 255, 0);
         transition: .7s;
         cursor: pointer;
     }
